fix: card image spacing issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,16 @@ body {
 .text-ml{
   margin-left: 39.5625rem
 }
+
+.text-mn {
+  font-size: 0.5rem;
+  line-height: 0.75rem;
+}
+
+.card-image-container div {
+  gap: 3.9%;
+}
+
+.card-image-container > div:nth-child(2) {
+  margin: -7% 0 -7% -.7%;
+}
